Week 1 Assignment in progess

--- a/Week1/Week1_Assignment.Rmd
+++ b/Week1/Week1_Assignment.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Week 1 Assignment: Basic R"
-author: "Student Name; Z620: Quantitative Biodiversity, Indiana University"
+author: "Michelle Benavidez; Z620: Quantitative Biodiversity, Indiana University"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: pdf_document
 geometry: margin=2.54cm
