--- a/Week1/Week1_Assignment.Rmd
+++ b/Week1/Week1_Assignment.Rmd
@@ -67,9 +67,14 @@ Feel free to reference the Week 0 handout.
 4) the log (base e) of your favorite number.
 
 ```{r}
-
-
-
+cubevolume=5^3
+cubevolume
+circleradius=pi*2^2
+circleradius
+lengthrst=(sin(pi/4))*(sqrt(2))
+lengthrst
+favelog=log(3)
+favelog
 
 ```
 
@@ -86,8 +91,12 @@ In the R code chunk below, do the following:
 3) Add `x` and `w` and divide by 15.
 
 ```{r}
-
-
+x=c(1,2,3,4,5)
+x
+w=x*14
+w
+number3=(x+w)/15
+number3
 
 ```
 
@@ -97,9 +106,12 @@ Now, do the following:
 3) Use the combine function to create one more vector, `d` that consists of any three elements from `w` and any four elements of `k`.
 
 ```{r}
-
-
-
+k=c(2,4,6,8,10)
+k
+number2=k*x
+number2
+d=c(14,28,42,2,4,6,8)
+d
 ```
 
 ### Summary Statistics of Vectors
