--- a/Week2-Alpha/alpha_assignment.Rmd
+++ b/Week2-Alpha/alpha_assignment.Rmd
@@ -50,7 +50,7 @@ In the R code chunk below, do the following:
 
 ```{r}
 data(BCI)
-str(BCI,max.level=50)
+str(BCI,max.level=0)
 ```
 
 ## 3) SPECIES RICHNESS
@@ -96,7 +96,7 @@ In the R code chunk below, do the following:
 
 ```{r}
 C=function(x = ""){1 - (sum(x == 1) / rowSums(x)) }
-
+C(BCI)
 ```
   
 ***Question 2***: Answer the following questions about coverage:
@@ -163,7 +163,7 @@ In the R code chunk below, do the following:
 4. Use these functions to estimate richness at both `site1` and `soilbac1`. 
 
 ```{r}
-Schao1=function(x=""){
+S.chao1=function(x=""){
 S.obs(x)+(sum(x==1)^2)/(2*sum(x==2))
 }
 S.chao1=function(x=""){
@@ -226,16 +226,17 @@ In the R code chunk below, please do the following:
 
 ```{r}
 
-
-
-
-
-
+soilbac.S=S.obs(soilbac.t)
+min.N=min(rowSums(soilbac.t))
+S.rarefy=rarefy(x=soilbac.t,sample=min.N,se=T)
+rarecurve(x=soilbac.t,step=20,col="blue", cex=0.6, las=1)
+abline(0,1,col='red')
+text(1500,1500,"1:1",pos=2,col='red')
 ```
 
 ***Question 4***: What is the difference between ACE and the Chao estimators?
 
-> ***Answer 4***:
+> Answer 4***: Unlike Chao estimators which only estimate singletonsand doulbletons, ACE accounts for rare species (i.e. species numbering less than or equal to 10); therefore, one should use ACE when there is a variety of taxa with only a few individuals.
 
 
 ##4) SPECIES EVENNESS
@@ -256,12 +257,18 @@ In the R code chunk below, do the following:
 4. Return the ranked vector
 
 ```{r}
-
-
-
-
-
-
+soilbac.S=S.obs(soilbac.t)
+min.N=min(rowSums(soilbac.t))
+S.rarefy=rarefy(x=soilbac.t,sample=min.N,se=T)
+rarecurve(x=soilbac.t,step=20,col="blue", cex=0.6, las=1)
+abline(0,1,col='red')
+text(1500,1500,"1:1",pos=2,col='red')
+RAC=function(x = ""){
+x = as.vector(x)
+x.ab = x[x > 0]
+x.ab.ranked = x.ab[order(x.ab, decreasing = TRUE)]
+return(x.ab.ranked)
+}
 
 ```
 
@@ -274,12 +281,20 @@ In the R code chunk below, do the following:
 2. Label the x-axis "Rank in abundance" and the y-axis "log(abundance)"
 
 ```{r}
-
-
-
-
-
-
+plot.new()
+site1=BCI[1, ]
+rac=RAC(x = site1)
+ranks=as.vector(seq(1, length(rac)))
+opar <- par(no.readonly = TRUE)
+par(mar = c(5.1, 5.1, 4.1, 2.1)) 
+plot(ranks, log(rac), type = 'p', axes = F,
+xlab = "Rank in abundance", ylab = "log(abundance)",
+las = 1, cex.lab = 1.4, cex.axis = 1.25)
+box() 
+axis(side = 1, labels = T, cex.axis = 1.25) 
+axis(side = 2, las = 1, cex.axis = 1.25, 
+labels = c(1, 2, 5, 10, 20), at = log(c(1, 2, 5, 10, 20)))
+par <- opar
 ```
 
 ***Question 5***: What effect does visualizing species abundance data on a log-scaled axis have on how we interpret evenness in the RAC?
@@ -298,9 +313,16 @@ In the R code chunk below, do the following:
 2. Calculate $E_{1/D}$ for `site1`.
 
 ```{r}
+par <- opar
+SimpE=function(x = ""){
+S=S.obs(x)
+x = as.data.frame(x)
+D=diversity(x, "inv")
+E=(D)/S
+return(E)
+}
 
-
-
+SimpE(site1)
 
 
 
@@ -319,9 +341,12 @@ In the R code chunk below, please do the following:
 3. Compare $E_{1/D}$ and $E_{var}$.
 
 ```{r}
+Evar=function(x){
+x=as.vector(x[x > 0])
+1 - (2/pi)*atan(var(log(x)))
+}
 
-
-
+Evar(site1)
 
 
 
@@ -349,7 +374,20 @@ In the R code chunk below, please do the following:
 
 ```{r}
 
+ShanH <- function(x = ""){
+    H = 0
+    for (n_i in x){
+        if(n_i > 0) {
+            p = n_i / sum(x)
+            H = H - p*log(p)
+        }
+    }
+    return(H)
+}
 
+ShanH(site1)
+
+diversity(site1, index = "shannon")
 
 
 
@@ -371,8 +409,20 @@ In the R code chunk below, please do the following:
 
 ```{r}
 
+SimpD <- function(x = ""){
+    D = 0
+    N = sum(x)
+    for (n_i in x){
+        D = D + (n_i^2)/(N^2)
+    }
+    return(D)}
 
-
+D.inv=1/SimpD(site1)
+D.sub=1-SimpD(site1)
+D.inv
+D.sub
+diversity(site1, "inv")
+diversity(site1, "simp")
 
 
 
@@ -400,16 +450,12 @@ In the R code chunk below, please do the following:
 
 ```{r}
 
+rac=as.vector(site1[site1>0])
+invD=diversity(rac,"inv")
+invD
 
-
-
-
-
-
-
-
-
-
+Fisher=fisher.alpha(rac)
+Fisher
 
 
 ```
@@ -440,10 +486,9 @@ In the R code chunk below, please do the following:
 3. Plot the results of the `radfit()` function using the code provided in the handout.
 
 ```{r}
-
-
-
-
+RACresults <- radfit(site1)
+plot.new()
+plot(RACresults, las = 1, cex.lab = 1.4, cex.axis = 1.25)
 
 ```
 
