--- a/Week2-Alpha/alpha_assignment.Rmd
+++ b/Week2-Alpha/alpha_assignment.Rmd
@@ -173,7 +173,7 @@ S.obs(x)+(sum(x==1)^2)/(2*sum(x==2))
 S.chao2=function(site="",SbyS=""){
 SbyS=as.data.frame(SbyS)
 x=SbyS[site,]
-SbyS.pa=(Sbys>0)*1
+SbyS.pa=(SbyS>0)*1
 Q1=sum(colSums(SbyS.pa)==1)
 Q2=sum(colSums(SbyS.pa)==2)
 S.chao2=S.obs(x)+(Q1^2)/(2*Q2)
@@ -257,12 +257,7 @@ In the R code chunk below, do the following:
 4. Return the ranked vector
 
 ```{r}
-soilbac.S=S.obs(soilbac.t)
-min.N=min(rowSums(soilbac.t))
-S.rarefy=rarefy(x=soilbac.t,sample=min.N,se=T)
-rarecurve(x=soilbac.t,step=20,col="blue", cex=0.6, las=1)
-abline(0,1,col='red')
-text(1500,1500,"1:1",pos=2,col='red')
+
 RAC=function(x = ""){
 x = as.vector(x)
 x.ab = x[x > 0]
@@ -299,7 +294,7 @@ par <- opar
 
 ***Question 5***: What effect does visualizing species abundance data on a log-scaled axis have on how we interpret evenness in the RAC?
 
-> ***Answer 5***:
+> Answer 5***: The visiualization gives as idea of how evenly abundance is distributed among observations.
 
 
 Now that we have visualized unevennes, it is time to quantify it using Simpson's evenness ($E_{1/D}$) and Smith and Wilson's evenness index ($E_{var}$).
@@ -325,9 +320,6 @@ return(E)
 SimpE(site1)
 
 
-
-
-
 ```
 
 ### Smith and Wilson's evenness index ($E_{var}$)
@@ -348,14 +340,12 @@ x=as.vector(x[x > 0])
 
 Evar(site1)
 
-
-
 ```
 
 ***Question 6***: Compare estimates of evenness for `site1` of BCI using $E_{1/D}$ and $E_{var}$.
 Do they agree? If so, why? If not, why? What can you infer from the results.
 
-> ***Answer 6***:
+> Answer 6***: Reponses from Simpson (~0.42) are not equal to Smith and Wilson (~0.51); therefore they two tests do not necessarily agree.  This disagreement is likely due to Simpson being biased towards differences in the most abundant species.  Smith and Wilson provides a more robust meaure of evenness than Simpson so due to the unevenness in dataset Smith and Wilson provide a better measure.  Based on results of Smith and Wilson, eveness is moderatly even.
 
 
 ##5) INTEGRATING RICHNESS AND EVENNESS: DIVERSITY METRICS
@@ -389,12 +379,8 @@ ShanH(site1)
 
 diversity(site1, index = "shannon")
 
-
-
-
-
-
-
+EH=4.018412/log(225)
+EH
 ```
 
 ### Simpson's diversity (or dominance)
@@ -424,21 +410,12 @@ D.sub
 diversity(site1, "inv")
 diversity(site1, "simp")
 
-
-
-
-
-
-
-
-
-
 ```
 
 ***Question 7***: Compare estimates of evenness for `site1` of BCI using $E_{H'}$ and $E_{var}$.
 Do they agree? If so, why? If not, why? What can you infer from the results.
 
-> ***Answer 7***:
+> Answer 7***: $E_{var}$ (~0.51) does not agree with $E_{H}$ (~0.74).  This is because The former only calculates evenness while the latter incorporates evenness and richness together thereby providing a measure of uncertainity.
 
 ### Fisher's $\boldsymbol\alpha$
 
@@ -462,7 +439,7 @@ Fisher
 
 ***Question 8***: How is Fisher's $\boldsymbol\alpha$ different from $E_{H'}$ and $E_{var}$? What does Fisher's $\boldsymbol\alpha$ take into account that $E_{H'}$ and $E_{var}$ do not?
 
-> ***Answer 8***:
+> Answer 8***: Fisher's alpha 
 
 ##6) MOVING BEYOND UNIVARIATE METRICS OF $\alpha$ DIVERSITY
 
@@ -497,15 +474,15 @@ plot(RACresults, las = 1, cex.lab = 1.4, cex.axis = 1.25)
 a) Based on the output of `radfit()` and plotting above, discuss which model best fits our rank-abundance curve for `site1`?
 b) Can we make any inferences about the forces, processes, and/or mechanisms influencing the structure of our system, e.g., an ecological community?
 
-> ***Answer 9a***:  
-> ***Answer 9b***:
+> Answer 9a***: Based on the results, it appears as if teh Mandelbrot is the best fit for our site1 RAC.  This model falls closely to the middle of most observations in the data set and does not deviate significantly from the distribution.
+> Answer 9b***:  
 
 
 ***Question 10***: Answer the following questions about the preemption model:
 a.  What does the preemption model assume about the relationship between total abundance (*N*) and total resources that can be preempted?
 b.  Why does the niche preemption model look like a straight line in the RAD plot?
 
-> ***Answer 10a***:  
+> ***Answer 10a***:  THe preemption model assumes a geometric relationship between rank and abundance; therefore, 
 > ***Answer 10b***:
 
 
@@ -524,13 +501,19 @@ Assuming a finite community, calculate Simpson's D, 1 - D, and Simpson's inverse
 For example, in a given sample, there may be 10 species represented by a single individual, 8 species with two individuals, 4 species with three individuals, and so on.
 In fact, the rank-abundance curve and the frequency distribution are the two most common ways to visualize the species-abundance distribution (SAD) and to test species abundance models and biodiversity theories.
 To address this homework question, use the R function **hist()** to plot the frequency distribution for `site 1` of the BCI site-by-species matrix, and describe the general pattern you see.
+> Answer: Data appears to be right-skewed with zero being the most common number This is followed by a sharp decline in frequency which then preceeds to steadily decline.
 
 3.  We asked you to find a biodiversity dataset with your partner.
 This data could be one of your own or it could be something that you obtained from the literature. 
 Load that dataset.
 How many sites are there?
+> Answer:  There are two general locations each possessing three sites.
+
 How many species are there in the entire site-by-species matrix?
+> On BCI matrix includes 317 species. Off BCI matrix includes 246 spcies. 
+
 Any other interesting observations based on what you learned this week?
+> Setting up a matric from existing abudance data was not as easy as I thought.  May need some reowrking before we can perform all the necessary tests for assessing diversity.
 
 ## SUBMITTING YOUR ASSIGNMENT
 Use Knitr to create a PDF of your completed alpha_assignment.Rmd document, push it to GitHub, and create a pull request.
