--- a/Week3-Beta/beta_assignment.Rmd
+++ b/Week3-Beta/beta_assignment.Rmd
@@ -65,12 +65,12 @@ head(doubs$env)
 ***Question 1***:  Describe some of the attributes of the `doubs` dataset.  
 
 a.  How many objects are in `doubs`?
-b.  How many fish species are there in the `doubs` dataset?
-c.  How many sites are in the `doubs` dataset?
+b.  How many fish species are there in the `doubs` dataset? 
+c.  How many sites are in the `doubs` dataset? 
 
-> ***Answer 1a***:  
-> ***Answer 1b***:  
-> ***Answer 1c***:  
+> Answer 1a***: Four objects
+> Answer 1b***: 27 fish species 
+> Answer 1c***: 30 sites
 
 ### Visualizing the Doubs River Dataset
 
@@ -80,9 +80,9 @@ a.  How does fish richness vary along the sampled reach of the Doubs River?
 b.  How does Brown Trout (*Salmo trutta*) abundance vary along the sampled reach of the Doubs River?
 c.  What do these patterns say about the limitations of using richness when examining patterns of biodiversity?
 
-> ***Answer 2a***:  
-> ***Answer 2b***:  
-> ***Answer 2c***:  
+> Answer 2a***:  Richness seems to decease as you move from downstream to upstream.
+> Answer 2b***:  Abundance of brown trout seems to increase as you move from downstream to upstream.
+> Answer 2c***:  Examining richness alones many be limited because it does a poor job of describing patterns in abundace.  Downstream you have many species with low abundances while upstream you have few species at high abundances.
 
 ## 3) QUANTIFYING BETA-DIVERSITY
 
@@ -100,7 +100,7 @@ beta.w=function(site.by.species = ""){
   return(b.w)
 }
 
-beta.w.turnover=function(site.by.species="",sitenum1="",sitenum2= "",pairwise= FALSE){
+beta.w=function(site.by.species="",sitenum1="",sitenum2= "",pairwise= FALSE){
   if (pairwise == TRUE){
     if (sitenum1 == "" | sitenum2 == "") {
       print("Error: please specify sites to compare") 
@@ -205,7 +205,7 @@ gplots::heatmap.2(as.matrix(fish),distfun=function(x) vegdist(x,method="bray"),
 
 ***Question 6***: Based on cluster analyses and the introductory plots that we generated after loading the data, develop an ecological hypothesis for fish diversity the `doubs` data set? 
 
-> ***Answer 6***: 
+> Answer 6***: Due to some environmental factor, some species of fish prefer and/or are limited to particular parts of the river.  Along the river gradient there seems to be four clusterings, with one clustering being particularly different.
 
 ### C.  Ordination
 
@@ -244,8 +244,9 @@ fishREL=fish
   for(i in 1:nrow(fish)){
     fishREL[i, ] = fish[i, ] / sum(fish[i, ]) 
   }
-fish.pcoa=add.spec.scores(fish.pcoa,fishREL,method = "pcoa.scores") text(fish.pcoa$cproj[ ,1], fish.pcoa$cproj[ ,2],
-    labels = row.names(fish.pcoa$cproj), col = "black")
+fish.pcoa=add.spec.scores(fish.pcoa,fishREL,method = "pcoa.scores") 
+text(fish.pcoa$cproj[ ,1], fish.pcoa$cproj[ ,2],
+     labels = row.names(fish.pcoa$cproj), col = "black")
 ```
 
 In the R code chunk below, do the following:  
@@ -254,7 +255,11 @@ In the R code chunk below, do the following:
 2. use a permutation test (999 permutations) to test the correlations of each species along each axis.
 
 ```{r}
+spe.corr=add.spec.scores(fish.pcoa, fishREL, method = "cor.scores")$cproj
+corrcut=0.7
+imp.spp=spe.corr[abs(spe.corr[, 1]) >= corrcut | abs(spe.corr[, 2]) >= corrcut, ]
 
+fit=envfit(fish.pcoa, fishREL, perm = 999)
 ```
 
 ***Question 7***: Address the following questions about the ordination results of the `doubs` data set:
@@ -278,19 +283,21 @@ In the code chunk below, test the hypothesis that fish community composition var
 
 ```{r}
 
+quality=c(rep("HQ", 13), rep("MQ", 5), rep("LQ", 6), rep("MQ", 5))
 
+adonis(fish ~ quality, method = "bray", permutations = 999)
 
+indval = multipatt(fish, cluster = quality, func = "IndVal.g", control = how(nperm=999)) 
+summary(indval)
 
-
-
-
-
-
+fish.rel=decostand(fish, method = "total")
+phi = multipatt(fish.rel, cluster = quality, func = "r.g", control = how(nperm=999)) 
+summary(phi)
 ```
 
 ***Question 8***: Based on the PERMANOVA, IndVal, and phi coefficient analyses, what did you learn about the relationship between habitat quality and the fish species composition?
 
-> ***Answer 8***: 
+> Answer 8***: Habitat quality has a significant affect on fish species composition and quality account for approixmately 45.8% of fish species composition is explained by habitat quality.  However, individual species are grouped together differently depending on the type of test used (IndVal vs. phi coefficient).  In both cases, however, some fish are group together in a LQ/MQ.
 
 
 ### B.  Multivariate Procedures for Continuous Designs
@@ -302,11 +309,9 @@ In the R code chunk below, do the following:
 2. use a Mantel test to determine if these matrices are correlated, and test the hypothesis that fish assemblages are correlated with stream environmental variables.
 
 ```{r}
-
-
-
-
-
+fish.dist=vegdist(doubs$fish[-8, ], method = "bray") 
+env.dist=vegdist(scale(doubs$env[-8,]),method = "euclid")
+mantel(fish.dist,env.dist)
 ```
 
 ***Question 9***: What do the results from our Mantel test suggest about fish diversity and stream environmental conditions? How does this relate to your hypothesis about stream quality influencing fish communities?
@@ -326,24 +331,58 @@ In the R code chunk below, do the following:
 
 ```{r}
 
+env.chem=as.matrix(doubs$env[-8 , 5:11])
 
+doubs.dbrda=dbrda(fish.db ~ ., as.data.frame(env.chem)) 
+ordiplot(doubs.dbrda)
 
+doubs.dbrda.mod0=dbrda(fish.db ~ 1, as.data.frame(env.chem))
 
+ordiplot(doubs.dbrda.mod0)
 
+doubs.dbrda.mod1=dbrda(fish.db ~ ., as.data.frame(env.chem))
 
+doubs.dbrda=ordiR2step(doubs.dbrda.mod0, doubs.dbrda.mod1, perm.max = 200)
 
+doubs.dbrda$call 
+doubs.dbrda$anova 
+ordiplot(doubs.dbrda)
 
+permutest(doubs.dbrda, permutations = 999) 
+envfit(doubs.dbrda, env.chem[,c(4,6,7)], perm = 999)
 
+dbrda.explainvar1=round(doubs.dbrda$CCA$eig[1] /
+                          sum(c(doubs.dbrda$CCA$eig, doubs.dbrda$CA$eig)), 3) * 100
+dbrda.explainvar2=round(doubs.dbrda$CCA$eig[2] /
+                          sum(c(doubs.dbrda$CCA$eig, doubs.dbrda$CA$eig)), 3) * 100
 
+par(mar = c(5, 5, 4, 4) + 0.1)
 
+plot(scores(doubs.dbrda, display = "wa"), xlim = c(-1.3, 1.1), ylim = c(-1.1, 2.7),
+     xlab = paste("dbRDA 1 (", dbrda.explainvar1, "%)", sep = ""),
+     ylab = paste("dbRDA 2 (", dbrda.explainvar2, "%)", sep = ""),
+     pch = 16, cex = 2.0, type = "n", cex.lab = 1.5, cex.axis = 1.2, axes = FALSE)
 
+axis(side = 1, labels = T, lwd.ticks = 2, cex.axis = 1.2, las = 1) 
+axis(side = 2, labels = T, lwd.ticks = 2, cex.axis = 1.2, las = 1) 
+abline(h = 0, v = 0, lty = 3)
+box(lwd = 2)
 
+points(scores(doubs.dbrda, display = "wa"),
+       pch = 19, cex = 3, bg = "gray", col = "gray")
+text(scores(doubs.dbrda, display = "wa"),
+     labels = row.names(scores(doubs.dbrda, display = "wa")))
 
+vectors <- scores(doubs.dbrda, display = "bp")
 
-
-
-
-
+arrows(0, 0, vectors[,1], vectors[, 2],
+       lwd = 2, lty = 1, length = 0.2, col = "red")
+text(vectors[,1], vectors[, 2], pos = 3, 
+     labels = row.names(vectors))
+axis(side = 3, lwd.ticks=2, cex.axis=1.2, las = 1, col = "red", lwd = 2.2,
+     at = pretty(range(vectors[, 1])) * 2, labels = pretty(range(vectors[, 1])))
+axis(side = 4, lwd.ticks=2, cex.axis=1.2, las = 1, col = "red", lwd = 2.2,
+     at = pretty(range(vectors[, 2])) * 2, labels = pretty(range(vectors[, 2])))
 ```
 
 ***Question 10***: Based on the constrained ordination, what are the environmental variables (or groups of correlated variables) that seem to be contributing to variation in fish community structure?
@@ -360,12 +399,43 @@ In the code chunk below,
 5. Partition the variation among sites into the relative importance of space, environment, spatially structured environment, and residuals,
 6. Plot the variation partitioning output to visualize it.  
 ```{r}
+doubs.dbrda$anova
+env.mod=model.matrix(~ oxy + bdo + nit, as.data.frame(env.chem))[,-1]
 
+rs=rowSums(fish)/sum(fish)
+doubs.pcnmw=pcnm(dist(doubs$xy[-8,]), w = rs, dist.ret = T)
+doubs.pcnmw$values > 0
 
+doubs.space=as.data.frame(scores(doubs.pcnmw))
+doubs.pcnm.mod0=dbrda(fish.db ~ 1, doubs.space)
+doubs.pcnm.mod1=dbrda(fish.db ~ ., doubs.space)
+step.pcnm=ordiR2step(doubs.pcnm.mod0, doubs.pcnm.mod1, perm.max = 200)
 
+plot(step.pcnm)
 
+step.pcnm$anova
 
+space.mod=model.matrix(~ PCNM2 + PCNM3 + PCNM5 + PCNM1 +
+                            PCNM13 + PCNM16 + PCNM6, doubs.space)[,-1]
 
+doubs.total.env=dbrda(fish.db ~ env.mod) 
+doubs.total.space=dbrda(fish.db ~ space.mod)
+
+doubs.env.cond.space=dbrda(fish.db ~ env.mod + Condition(space.mod)) doubs.space.cond.env=dbrda(fish.db ~ space.mod + Condition(env.mod))
+
+permutest(doubs.env.cond.space, permutations = 999) 
+permutest(doubs.space.cond.env, permutations = 999) 
+permutest(doubs.total.env, permutations = 999)
+permutest(doubs.total.space, permutations = 999)
+
+doubs.varpart=varpart(fish.db, env.mod, space.mod) 
+doubs.varpart
+
+par(mar = c(2,2,2,2))
+plot(doubs.varpart)
+text(1, 0.25, "Space")
+text(0, 0.25, "Env")
+mtext("Variation Partitioning of\nDoubs Fish Diversity", side = 3, line = -3)
 
 ```
 
