--- a/Week3-Beta/beta_assignment.Rmd
+++ b/Week3-Beta/beta_assignment.Rmd
@@ -100,7 +100,7 @@ beta.w=function(site.by.species = ""){
   return(b.w)
 }
 
-beta.w=function(site.by.species="",sitenum1="",sitenum2= "",pairwise= FALSE){
+beta.w.turnover=function(site.by.species="",sitenum1="",sitenum2= "",pairwise= FALSE){
   if (pairwise == TRUE){
     if (sitenum1 == "" | sitenum2 == "") {
       print("Error: please specify sites to compare") 
@@ -140,7 +140,7 @@ In order to quantify $\beta$-diversity for more than two samples, we need to int
 
 ***Question 4***: How do incidence- and abundance-based metrics differ in their treatment of rare species?
 
-> ***Answer 4***:  
+> Answer 4***:  Incidence-based metrics rely only on presence/absence which abundance-based metrics take into accound the number of individuals that are included in the sample.  This makes abundance-based metrics more quantitative; therefore they are able to account for the abundance of rare species elative to common species in the dataset.
 
 In the R code chunk below, do the following:  
 
@@ -158,6 +158,7 @@ fish.ds=vegdist(fish,method="bray",binary=T)
 fish.db  #resemblance matrix Bray-Curtis based
 fish.db=vegdist(fish,method="bray",upper=T,diag=T)  #square resemblance matrix
 fish.db
+fish.ds=vegdist(fish,method="bray",binary=T,upper=T,diag=T)
 fish.ds
 ```
 
@@ -166,8 +167,8 @@ fish.ds
 a. Does the resemblance matrix (`fish.db`) represent similarity or dissimilarity? What information in the resemblance matrix led you to arrive at your answer? 
 b. Compare the resemblance matrices (`fish.db` or `fish.ds`) you just created. How does the choice of the Sørensen or Bray-Curtis distance influence your interpretation of site (dis)similarity?
 
-> ***Answer 5a***:  
-> ***Answer 5b***:
+> Answer 5a***:  This matrix represents dissimlarity.  You can deduce this from the relationship of a species to itself equalling zero.  This means that something is 0% different from itself (which makes perfect sense!). 
+> Answer 5b***:  The abundance-based matrix seems to generate more dissimilarity.
 
 ## 4) VISUALIZING BETA-DIVERSITY
 
@@ -205,7 +206,7 @@ gplots::heatmap.2(as.matrix(fish),distfun=function(x) vegdist(x,method="bray"),
 
 ***Question 6***: Based on cluster analyses and the introductory plots that we generated after loading the data, develop an ecological hypothesis for fish diversity the `doubs` data set? 
 
-> Answer 6***: Due to some environmental factor, some species of fish prefer and/or are limited to particular parts of the river.  Along the river gradient there seems to be four clusterings, with one clustering being particularly different.
+> Answer 6***: Due to some environmental factor, some species of fish prefer and/or are limited to particular parts of the river.  Along the river gradient there seems to be four clusterings, with one clustering being particularly different from the other three.
 
 ### C.  Ordination
 
@@ -267,8 +268,8 @@ fit=envfit(fish.pcoa, fishREL, perm = 999)
 a.  Describe the grouping of sites in the Doubs River based on fish community composition.
 b.  Generate a hypothesis about which fish species are potential indicators of river quality.
 
-> ***Answer 7a***:  
-> ***Answer 7b***:   
+> Answer 7a***:  
+> Answer 7b***:   
 
 
 ## 5) HYPOTHESIS TESTING
@@ -316,7 +317,7 @@ mantel(fish.dist,env.dist)
 
 ***Question 9***: What do the results from our Mantel test suggest about fish diversity and stream environmental conditions? How does this relate to your hypothesis about stream quality influencing fish communities?
 
-> ***Answer 9***:  
+> Answer 9***:  The Mantel test indicates that there is a moderately strong (Mantel r = 0.60) correlation between fish species composition and environmetnal variability.  This relates to the hypothesis about stream quality because it could mean that the type and abundance fo fish that change as a result of environmental variables may be related to the quality of the water.
 
 ### ii.  Constrained Ordination
 In the R code chunk below, do the following:  
@@ -387,7 +388,7 @@ axis(side = 4, lwd.ticks=2, cex.axis=1.2, las = 1, col = "red", lwd = 2.2,
 
 ***Question 10***: Based on the constrained ordination, what are the environmental variables (or groups of correlated variables) that seem to be contributing to variation in fish community structure?
 
-> ***Answer 10***: 
+> Answer 10***: Based on this ordination, biological oxygen demand, nitrate concentration, and dissolved oxygen are the most important environmetnal variables that exaplin fish species composition along the Doubs river.
 
 ### iii. Variation Partitioning
 In the code chunk below,   
@@ -421,7 +422,8 @@ space.mod=model.matrix(~ PCNM2 + PCNM3 + PCNM5 + PCNM1 +
 doubs.total.env=dbrda(fish.db ~ env.mod) 
 doubs.total.space=dbrda(fish.db ~ space.mod)
 
-doubs.env.cond.space=dbrda(fish.db ~ env.mod + Condition(space.mod)) doubs.space.cond.env=dbrda(fish.db ~ space.mod + Condition(env.mod))
+doubs.env.cond.space=dbrda(fish.db ~ env.mod + Condition(space.mod)) 
+doubs.space.cond.env=dbrda(fish.db ~ space.mod + Condition(env.mod))
 
 permutest(doubs.env.cond.space, permutations = 999) 
 permutest(doubs.space.cond.env, permutations = 999) 
@@ -441,7 +443,7 @@ mtext("Variation Partitioning of\nDoubs Fish Diversity", side = 3, line = -3)
 
 ***Question 11***: Interpret the variation partitioning results.   
 
-> ***Answer 11***: 
+> Answer 11***: Spatial drivers account for 25% of the variation in fish community composition, environmental drivers account for the 13% of the variation in fish community composition, and the interaction between spatial and environmental drivers accounts for 37% of the variation in fish community composition.  Therefore, approximately 74% of the variation in fish community composition is exaplained by spatial and/or environmental drivers.
 
 ## SYNTHESIS
 Load the dataset you are using for your project. Perform an ordination to visualize your dataset.  Using this ordination, develop some hypotheses relevant to $\beta$-diversity and identify the appropriate tools you would use to test them.
